@@ -25,6 +25,9 @@ import java.util.Map;
 
 import org.apache.asterix.common.config.DatasetConfig.DatasetType;
 import org.apache.asterix.common.metadata.DataverseName;
+import org.apache.asterix.common.metadata.MetadataUtil;
+import org.apache.asterix.metadata.bootstrap.DatasetEntity;
+import org.apache.asterix.metadata.dataset.DatasetFormatInfo;
 import org.apache.asterix.metadata.entities.Dataset;
 import org.apache.asterix.metadata.entities.InternalDatasetDetails;
 import org.apache.asterix.metadata.entities.InternalDatasetDetails.FileStructure;
@@ -52,18 +55,24 @@ public class DatasetTupleTranslatorTest {
                     indicator == null ? null : Collections.singletonList(indicator),
                     Collections.singletonList(BuiltinType.AINT64), false, null, null);
 
-            Dataset dataset = new Dataset(DataverseName.createSinglePartName("test"), "log",
-                    DataverseName.createSinglePartName("foo"), "LogType", DataverseName.createSinglePartName("CB"),
+            DataverseName dv = DataverseName.createSinglePartName("test");
+            DataverseName itemTypeDv = DataverseName.createSinglePartName("foo");
+            DataverseName metaTypeDv = DataverseName.createSinglePartName("CB");
+            String db = MetadataUtil.databaseFor(dv);
+            String itemTypeDb = MetadataUtil.databaseFor(itemTypeDv);
+            String metaTypeDb = MetadataUtil.databaseFor(metaTypeDv);
+            Dataset dataset = new Dataset(db, dv, "log", itemTypeDb, itemTypeDv, "LogType", metaTypeDb, metaTypeDv,
                     "MetaType", "DEFAULT_NG_ALL_NODES", "prefix", compactionPolicyProperties, details,
-                    Collections.emptyMap(), DatasetType.INTERNAL, 115, 0, CompressionManager.NONE);
-            DatasetTupleTranslator dtTranslator = new DatasetTupleTranslator(true);
+                    Collections.emptyMap(), DatasetType.INTERNAL, 115, 0, CompressionManager.NONE,
+                    DatasetFormatInfo.SYSTEM_DEFAULT);
+            DatasetTupleTranslator dtTranslator = new DatasetTupleTranslator(true, DatasetEntity.of(false));
             ITupleReference tuple = dtTranslator.getTupleFromMetadataEntity(dataset);
             Dataset deserializedDataset = dtTranslator.getMetadataEntityFromTuple(tuple);
             Assert.assertEquals(dataset.getMetaItemTypeDataverseName(),
                     deserializedDataset.getMetaItemTypeDataverseName());
             Assert.assertEquals(dataset.getMetaItemTypeName(), deserializedDataset.getMetaItemTypeName());
             if (indicator == null) {
-                Assert.assertEquals(Collections.singletonList(new Integer(0)),
+                Assert.assertEquals(Collections.singletonList(Integer.valueOf(0)),
                         ((InternalDatasetDetails) deserializedDataset.getDatasetDetails()).getKeySourceIndicator());
             } else {
                 Assert.assertEquals(((InternalDatasetDetails) dataset.getDatasetDetails()).getKeySourceIndicator(),
